--- a/ap/main-ap.master
+++ b/ap/main-ap.master
@@ -53,8 +53,8 @@
     <script src="../js/MyScript.js"></script>
     <!-- CSS -->
     <!-- Bootstrap & FontAwesome & Entypo CSS -->
-    <link href="<%# ResolveUrl("~/css/bootstrap.min.css") %>" rel="stylesheet" type="text/css" />
-    <link href="<%# ResolveUrl("~/css/font-awesome.min.css") %>" rel="stylesheet" type="text/css" />
+    <link href="<%# ResolveUrl("~/css/bootstrap.min.css") %>" rel="stylesheet" type="text/css" />    <!-- Bootstrap 5 (CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />    <link href="<%# ResolveUrl("~/css/font-awesome.min.css") %>" rel="stylesheet" type="text/css" />
 
     <link href="<%# ResolveUrl("~/css/font-entypo.css") %>" rel="stylesheet" type="text/css" />
 
@@ -493,8 +493,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script type="text/javascript" src='<%= ResolveClientUrl("~/js/jquery.js") %>'></script>
 
-    <script type="text/javascript" src='<%= ResolveClientUrl("~/js/bootstrap.min.js") %>'></script>
-    <%--<script type="text/javascript" src='<%= ResolveClientUrl("~/plugins/jquery-ui/jquery-ui.custom.min.js") %>'></script>--%>
+    <script type="text/javascript" src='<%= ResolveClientUrl("~/js/bootstrap.min.js") %>'></script>    <!-- Bootstrap 5 bundle (CDN) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>    <%--<script type="text/javascript" src='<%= ResolveClientUrl("~/plugins/jquery-ui/jquery-ui.custom.min.js") %>'></script>--%>
     <script type="text/javascript" src='<%= ResolveClientUrl("~/plugins/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js") %>'></script>
 
     <script type="text/javascript" src='<%= ResolveClientUrl("~/js/caroufredsel.js") %>'></script>
