--- a/login.master
+++ b/login.master
@@ -6,6 +6,8 @@
     <title>eAM Login</title>
     <link rel="shortcut icon" href="eAM.ico" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap 5 (CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="Smoke/smoke.css" rel="stylesheet" type="text/css" />
     <script src="Smoke/smoke.js" type="text/javascript"></script>
     <script src="Smoke/smoke.min.js" type="text/javascript"></script>
@@ -27,5 +29,7 @@
         <asp:Label ID="Label1" runat="server"></asp:Label>
     </div>
     </form>
+    <!-- Bootstrap 5 bundle (CDN) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
