--- a/main.master
+++ b/main.master
@@ -23,6 +23,8 @@
 
     <!-- Bootstrap & FontAwesome & Entypo CSS -->
     <link rel="stylesheet" type="text/css" href="<%# ResolveClientUrl("~/css/bootstrap.min.css") %>" />
+    <!-- Bootstrap 5 (CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="<%# ResolveClientUrl("~/css/font-awesome.min.css") %>" rel="stylesheet" type="text/css" />
     <link href="<%# ResolveClientUrl("~/css/font-entypo.css") %>" rel="stylesheet" type="text/css" />
 
@@ -514,6 +516,8 @@
     <script type="text/javascript" src='<%= ResolveClientUrl("~/js/jquery.js") %>'></script>
 
     <script type="text/javascript" src='<%= ResolveClientUrl("~/js/bootstrap.min.js") %>'></script>
+    <!-- Bootstrap 5 bundle (CDN) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src='<%= ResolveClientUrl("~/plugins/jquery-ui/jquery-ui.custom.min.js") %>'></script>
     <script type="text/javascript" src='<%= ResolveClientUrl("~/plugins/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js") %>'></script>
 
